--- a/Views/Employee/List.cshtml
+++ b/Views/Employee/List.cshtml
@@ -7,7 +7,7 @@
 <h1>List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Employee" asp-action="CreateClient">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -69,9 +69,9 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "UpdateClient", new { guid = item.Guid  }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "DeleteClient", new { guid = item.Guid })
             </td>
         </tr>
 }
