--- a/Views/Employee/UpdateClient.cshtml
+++ b/Views/Employee/UpdateClient.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "UpdateClient";
 }
 
-<h1>UpdateClient</h1>
+<h1>Update Employee</h1>
 
-<h4>EmployeeDto</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
