--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -275,6 +275,7 @@
 
                     <!-- Start Main Body -->
                     <div>
+                        <partial name="_Notification" />
                         @RenderBody()
                     </div>
                     <!-- End Main Body -->
