--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Wilujeng dalu</h1>
-    <p>pelajari tentang <a href="https://docs.microsoft.com/aspnet/core">membuat website dengan ASP Net core</a>.</p>
+    <h1 class="display-4">Selamat Datang di Home Page</h1>
+    <p>Belum punya akun nya coba buat dulu <a href="/Auth/Register">Register</a>.</p>
 </div>
