--- a/Views/Auth/LoginClient.cshtml
+++ b/Views/Auth/LoginClient.cshtml
@@ -5,30 +5,67 @@
 }
 
 @* <h1>LoginClient</h1> *@
-@* 
-<h4>LoginDto</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="LoginClient">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div> *@
+<div class="container">
 
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+
+        <div class="col-xl-10 col-lg-12 col-md-9">
+
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-login-image-new"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                </div>
+                                <form class="user" asp-action="LoginClient">
+                                    <div class="form-group">
+                                        <input type="email" asp-for="Email" class="form-control form-control-user"
+                                               id="exampleInputEmail" aria-describedby="emailHelp"
+                                               placeholder="Enter Email Address...">
+                                        <span asp-validation-for="Email" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" asp-for="Password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">
+                                                Remember
+                                                Me
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                                        Login
+                                    </button>
+
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="/Auth/forgot-password">Forgot Password?</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="/Auth/Register">Create an Account!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+@* 
 <!-- Pills navs -->
 <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
@@ -44,7 +81,7 @@
 <!-- Pills content -->
 <div class="tab-content">
     <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-        <form asp-action="LoginClient"s>
+        <form asp-action="LoginClient" s>
             <div class="text-center mb-3">
                 <p>Sign in with:</p>
                 <button type="button" class="btn btn-link btn-floating mx-1">
@@ -68,7 +105,7 @@
 
             <!-- Email input -->
             <div class="form-outline mb-4">
-                <input  asp-for="Email"  id="loginName" class="form-control" />
+                <input asp-for="Email" id="loginName" class="form-control" />
                 <label class="form-label" asp-for="Email" for="loginName">Email or username</label>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
@@ -173,4 +210,4 @@
         </form>
     </div>
 </div>
-<!-- Pills content -->
+<!-- Pills content --> *@
