--- a/wwwroot/admin/css/sb-admin-2.css
+++ b/wwwroot/admin/css/sb-admin-2.css
@@ -10861,19 +10861,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
-  background-size: cover;
+    background: url(https://images.unsplash.com/photo-1692035072849-93a511f35b2c);
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
-  background-position: center;
-  background-size: cover;
+    background: url("~/admin/img/login.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("~/admin/img/login.jpg");
   background-position: center;
   background-size: cover;
 }
