--- a/wwwroot/scss/error.css
+++ b/wwwroot/scss/error.css
@@ -1,7 +1,6 @@
 ﻿@import 'https://fonts.googleapis.com/css?family=Inconsolata';
 html {
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 body {
   box-sizing: border-box;
@@ -10,11 +9,10 @@ body {
   background-image: radial-gradient(#11581E, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Inconsolata", Helvetica, sans-serif;
+  font-family: 'Inconsolata', Helvetica, sans-serif;
   font-size: 1.5rem;
   color: rgba(128, 255, 128, 0.8);
-  text-shadow: 0 0 1ex rgb(51, 255, 51), 0 0 2px rgba(255, 255, 255, 0.8);
-}
+  text-shadow: 0 0 1ex #33ff33, 0 0 2px rgba(255, 255, 255, 0.8); }
 
 .noise {
   pointer-events: none;
@@ -25,18 +23,16 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-  opacity: 0.02;
-}
+  opacity: .02; }
 
 .overlay {
   pointer-events: none;
   position: absolute;
   width: 100%;
   height: 100%;
-  background: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0) 100%);
+  background: repeating-linear-gradient(180deg, transparent 0, rgba(0, 0, 0, 0.3) 50%, transparent 100%);
   background-size: auto 4px;
-  z-index: 1;
-}
+  z-index: 1; }
 
 .overlay::before {
   content: "";
@@ -51,17 +47,14 @@ body {
   height: 100%;
   background-image: linear-gradient(0deg, transparent 0%, rgba(32, 128, 32, 0.2) 2%, rgba(32, 128, 32, 0.8) 3%, rgba(32, 128, 32, 0.2) 3%, transparent 100%);
   background-repeat: no-repeat;
-  animation: scan 7.5s linear 0s infinite;
-}
+  animation: scan 7.5s linear 0s infinite; }
 
 @keyframes scan {
   0% {
-    background-position: 0 -100vh;
-  }
+    background-position: 0 -100vh; }
   35%, 100% {
-    background-position: 0 100vh;
-  }
-}
+    background-position: 0 100vh; } }
+
 .terminal {
   box-sizing: inherit;
   position: absolute;
@@ -69,17 +62,14 @@ body {
   width: 1000px;
   max-width: 100%;
   padding: 4rem;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .output {
   color: rgba(128, 255, 128, 0.8);
-  text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8);
-}
+  text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8); }
 
 .output::before {
-  content: "> ";
-}
+  content: "> "; }
 
 /*
 .input {
@@ -95,17 +85,13 @@ body {
 */
 a {
   color: #fff;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 a::before {
-  content: "[";
-}
+  content: "["; }
 
 a::after {
-  content: "]";
-}
+  content: "]"; }
 
 .errorcode {
-  color: white;
-}
+  color: white; }
